Add core event loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ name = "Infwinity"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1.0"
+smithay = { git = "https://github.com/Smithay/smithay", features = ["wayland_frontend", "backend_winit"] }
